--- a/rendezvous_service_code/Dockerfile.rendezvous
+++ b/rendezvous_service_code/Dockerfile.rendezvous
@@ -22,4 +22,5 @@ ENV PORT 8080
 # Command to run the Uvicorn server for FastAPI
 # --host 0.0.0.0 makes it accessible from outside the container
 # --port $PORT uses the port specified by the environment variable (set by Cloud Run)
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"] 
+# Adding --log-level trace for verbose Uvicorn output
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080", "--log-level", "trace"] 
