--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 websockets>=12.0
 requests>=2.0.0
 # Flask    # Not needed anymore if we removed the Flask app 
+pystun3>=1.1.6 
+# Check for the latest stable version of pystun3 
