Add GCS-based benchmark

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 websockets>=12.0
 requests>=2.0.0
 # Flask    # Not needed anymore if we removed the Flask app 
-pystun3>=1.1.6 
+pystun3>=1.1.6
+# For async GCS download in benchmark
+aiohttp>=3.8
 # Check for the latest stable version of pystun3 
