TCP wholepunching progress

--- a/tcp_hole_punching/.envrc
+++ b/tcp_hole_punching/.envrc
@@ -73,7 +73,29 @@ export WORKER_IMAGE_TAG="latest" # Tag for the worker service image
 # Remember to replace all placeholder values marked with '!!!'.
 # ------------------------------------------------------------------------------ 
 
-# External Echo Service (NEW)
+# External Echo Service (NEW - Deployed to a different region for NAT traversal testing)
 export EXTERNAL_ECHO_IMAGE_NAME="external-echo-service"
 export EXTERNAL_ECHO_SERVICE_NAME="external-echo-service"
 export EXTERNAL_ECHO_CONTAINER_PORT="8080"
+export EXTERNAL_ECHO_REGION="europe-west1" # NEW: Region for the echo service
+export EXTERNAL_ECHO_SERVER_HOST="external-echo-service-982092720909.europe-west1.run.app" # UPDATED
+export EXTERNAL_ECHO_SERVER_PORT="443" # NEW: External port for Cloud Run service (HTTPS)
+# export ECHO_VPC_CONNECTOR_NAME="echo-vpc-connector" # Keeping this commented, likely not needed if echo is public in another region
+
+# --- VM-based External Echo Service settings (NEW) ---
+# These are required when the echo service is deployed on a Compute Engine VM instead of Cloud Run.
+# The redeploy.sh script will create (or recreate) the VM automatically.
+#
+# Name of the VM instance (must be unique within the project/zone)
+export EXTERNAL_ECHO_VM_NAME="external-echo-vm" # CHANGE if you prefer a different name
+# Compute Engine zone where the VM will live (should be in EXTERNAL_ECHO_REGION for lowest latency)
+export EXTERNAL_ECHO_VM_ZONE="europe-west1-b"   # CHANGE if you prefer a different zone
+# TCP port that will be exposed on the VM's external IP and forwarded to the container's 8080
+export EXTERNAL_ECHO_VM_EXTERNAL_PORT="12345"   # CHANGE if you need a different public port
+
+# The workers should dial the VM's external IP on the port above, so keep these two in sync
+export EXTERNAL_ECHO_SERVER_PORT="${EXTERNAL_ECHO_VM_EXTERNAL_PORT}"
+
+# --- STUN Server Settings (REMOVED - Replaced by external echo service in different region) ---
+# export STUN_HOST="stun.sipnet.net"
+# export STUN_PORT="3478"
