--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -10,9 +10,11 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir --prefer-binary -r requirements.txt
 
-# Copy the application code
-COPY main.py .
-COPY index.html .
+# Copy the application source code (all Python modules, HTML, and other necessary files)
+# Using the wildcard ensures new modules are automatically included without needing manual Dockerfile edits.
+COPY *.py ./
+COPY index.html ./
+# If you have other ancillary files (e.g., certificates, static assets) place additional COPY commands here.
 
 # This worker doesn't run a Gunicorn server anymore; it runs the main.py script directly.
 # The PORT environment variable is not directly used by main.py unless you add server logic back.
