Add QUIC reconnection check

--- a/.envrc
+++ b/.envrc
@@ -17,5 +17,6 @@ export AR_WORKER_REPO_NAME="ip-worker-repo"
 export WORKER_SERVICE_NAME="ip-worker-service"
 export WORKER_IMAGE_TAG="v_ip_update" # Assuming this is the tag for the *pre-built* image
 export BENCHMARK_CHUNK_SIZE="8192" # Default chunk size for benchmark
+export STUN_RECHECK_INTERVAL_SEC="60"  # Frequency to refresh STUN endpoint
 
 echo "Holepunch environment variables loaded from .envrc" 
