added pure go hole punching starter

--- a/.envrc
+++ b/.envrc
@@ -18,4 +18,8 @@ export WORKER_SERVICE_NAME="ip-worker-service"
 export WORKER_IMAGE_TAG="v_ip_update" # Assuming this is the tag for the *pre-built* image
 export BENCHMARK_CHUNK_SIZE="8192" # Default chunk size for benchmark
 
+# Cloud SDK convenience
+export CLOUDSDK_CORE_PROJECT="$PROJECT_ID"
+export CLOUDSDK_COMPUTE_REGION="$REGION"
+
 echo "Holepunch environment variables loaded from .envrc" 
