--- a/go-libp2p-holepunch-services/Makefile
+++ b/go-libp2p-holepunch-services/Makefile
@@ -5,11 +5,12 @@
 #   make worker RENDEZVOUS=<multiaddr>   # start a worker pointing at the rendezvous address
 #   make worker-multi N=3 RENDEZVOUS=<multiaddr>  # start N workers in background (requires GNU seq)
 
-.PHONY: rendezvous worker worker-multi
+.PHONY: rendezvous worker worker-multi peerapi
 
 # Build variables
 RENDEZVOUS_DIR=./rendezvous
 WORKER_DIR=./worker
+PEERAPI_DIR=./peerapi
 
 rendezvous:
 	@echo "Starting rendezvous service..."
@@ -32,4 +33,8 @@ endif
 	@for i in $(shell seq 1 $(or ${N},1)); do \
 		( cd $(WORKER_DIR) && go run . -rendezvous $(RENDEZVOUS) ) & \
 	done
-	@echo "Workers started in background. Use 'jobs' to list." 
+	@echo "Workers started in background. Use 'jobs' to list."
+
+peerapi:
+	@echo "Starting peer discovery API service..."
+	@cd $(PEERAPI_DIR) && go run . 
