Add missing Trino endpoints for node scheduling
- Add /v1/node and /v1/worker to coordinator paths (node management)
- Add /v1/memory and /v1/stats to common paths (resource monitoring)
- Add internal-communication configuration for node authentication
- These endpoints are required for Trino's NodeManager to validate nodes

--- a/trino-config/config.properties
+++ b/trino-config/config.properties
@@ -26,3 +26,7 @@ exchange.max-response-size=16MB
 # Query configuration
 query.low-memory-killer.delay=5m
 query.max-execution-time=10m
+
+# Internal communication for P2P
+internal-communication.https.required=false
+internal-communication.shared-secret=holepunch-secret
