Refactor project structure and enhance rendezvous service. Updated .gitignore to exclude specific directories, removed HTTP public IP reporting from worker registration, and added new Go files for rendezvous and worker services. Enhanced admin UI for better worker management and chat functionality. Improved STUN discovery logging and message handling for P2P connections.

--- a/repomix.config.json
+++ b/repomix.config.json
@@ -20,11 +20,21 @@
       "*.log",
       "*.tmp",
       ".DS_Store",
-      "repomix-output.xml"
+      "repomix-output.xml",
+      ".git/**",
+      "node_modules/**"
     ]
   },
   "include": [
     "**/*.go",
+    "**/cmd/**/*.go",
+    "**/cmd/**",
+    "holepunch-go/cmd/**",
+    "**/main.go",
+    "**/go.mod",
+    "**/go.sum",
+    "**/go.work",
+    "**/go.work.sum",
     "**/*.py",
     "**/*.md",
     "**/*.mod",
